Fixed problem where scrollbar would show up on long comments

--- a/src/styles/comment.css
+++ b/src/styles/comment.css
@@ -8,6 +8,7 @@ a {
     padding-bottom: 1%;
     border-bottom: 1px solid #fab162;
     padding-top: '1%';
+    overflow-x: hidden;
 }
 
 .comment-body {
